Crash when i Open blend file. #35570

Closed
opened 2013-05-30 12:27:17 +02:00 by paul geraskin · 5 comments
Member

%%%--- Operating System, Graphics card ---
Linux 64bit, NVidia gtx

- Blender version with error, and version that worked ---

r57101

- Short description of error ---

Cannot open a file. Crash.
https://dl.dropboxusercontent.com/u/26887202/blender/kc_buildings_028_tent_03_animation_02.blend

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- Linux 64bit, NVidia gtx - Blender version with error, and version that worked --- r57101 - Short description of error --- Cannot open a file. Crash. https://dl.dropboxusercontent.com/u/26887202/blender/kc_buildings_028_tent_03_animation_02.blend - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%LOG:

backtrace

./blender() [0xf4c2d7]
./blender() [0xf4c515]
/lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f39bcd464a0]
./blender(BLI_strnlen+0x7) [0x18069d7]
./blender(BLI_strncpy+0x25) [0x1806a95]
./blender(BLI_uniquename_cb+0x14f) [0x17f4f2f]
./blender() [0x15560bf]
./blender(nodeAddSocket+0x35) [0x1556285]
./blender() [0x1624ddd]
./blender(node_group_input_verify+0x47) [0x1624ed7]
./blender() [0x15569f3]
./blender(nodeAddNode+0x7e) [0x1556c6e]
./blender() [0x15b5633]
./blender(blo_read_file_internal+0x16e) [0x15c44ce]
./blender(BLO_read_from_file+0x38) [0x15c57a8]
./blender(BKE_read_file+0x44) [0x1570394]
./blender(WM_file_read+0x123) [0xf54023]
./blender() [0xf5d2b9]
./blender() [0xf67870]
./blender() [0xf67a86]
./blender(wm_event_do_handlers+0x19a) [0xf67d8a]
./blender(WM_main+0x18) [0xf538b8]
./blender(main+0x31b) [0xf4e877]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f39bcd3176d]
./blender() [0xe8a9c5]
%%%

%%%LOG: # backtrace ./blender() [0xf4c2d7] ./blender() [0xf4c515] /lib/x86_64-linux-gnu/libc.so.6(+0x364a0) [0x7f39bcd464a0] ./blender(BLI_strnlen+0x7) [0x18069d7] ./blender(BLI_strncpy+0x25) [0x1806a95] ./blender(BLI_uniquename_cb+0x14f) [0x17f4f2f] ./blender() [0x15560bf] ./blender(nodeAddSocket+0x35) [0x1556285] ./blender() [0x1624ddd] ./blender(node_group_input_verify+0x47) [0x1624ed7] ./blender() [0x15569f3] ./blender(nodeAddNode+0x7e) [0x1556c6e] ./blender() [0x15b5633] ./blender(blo_read_file_internal+0x16e) [0x15c44ce] ./blender(BLO_read_from_file+0x38) [0x15c57a8] ./blender(BKE_read_file+0x44) [0x1570394] ./blender(WM_file_read+0x123) [0xf54023] ./blender() [0xf5d2b9] ./blender() [0xf67870] ./blender() [0xf67a86] ./blender(wm_event_do_handlers+0x19a) [0xf67d8a] ./blender(WM_main+0x18) [0xf538b8] ./blender(main+0x31b) [0xf4e877] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f39bcd3176d] ./blender() [0xe8a9c5] %%%

%%%Lukas, not sure what's going on here. First thing you need to pass non-NULL default name to unique callback. But even after this i've got link with fromsock == NULL which is weird. Can you please look into this?%%%

%%%Lukas, not sure what's going on here. First thing you need to pass non-NULL default name to unique callback. But even after this i've got link with fromsock == NULL which is weird. Can you please look into this?%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35570
No description provided.